  Added getListOfAllNodesBackups, REQUEST_ALL_NODES_BACKUPS_LIST
  Added NodeModifiedTimestamp updated on NV & EV writes
  Reworked loading of MDF's for nodes - was failing to reload MDF if node firmware updated
  removed NODE_DESCRIPTOR_FILE_LIST event
  separated updateNodeStatus into preOpcodeProcessing & postOpcodeProcessing methods
  Updated Client
  - added Backups column to Node View
  - added backup notification if variables changed
  - removed redundant NODE_DESCRIPTOR_FILE_LIST event
  - added numeric limits to add event dialog

MMC Version 0.11.2
  Client
  - fixed missing event name & group in Events by Node list - caused by the settings change in the last version

MMC Version 0.11.1
  ProgramNode now uses load address from the hex file to decide where to start the download from
  Previously it was always 0x800, but rule sets are 0x7900
  ProgramNode now fills 0x7900 to 0x7FFF with blank (FF) for CANCOMPUTE rulesets
  Expanded file info for Program Node
  Client
  - added column settings to Node view and Events by Node list
  - In ProgramNodeDiag expanded file info to include load address

MMC Version 0.11.0
  Added functions to support zipped logs in an archive directory 
  Client
  - Added LogsDialog to allow user download of logs from a list

MMC Version 0.10.9
  Added NODE_BACKUP_SAVED message to send to client
  Added nodeDescripter_Queue to pace loading MDF's
  MDF delete now refreshes user file list
  Updated CANLED64 V2g MDF with channel names
  Client
    - Changed RestoreNodeDialog to NodeBackupAndRestoreDialog
    - added link to NodeBackupDialog in NodeBackupAndRestoreDialog
    - Added upload & download to NodeBackupAndRestoreDialog
    - Added support for NODE_BACKUP_SAVED message from server
    - Added BusTrafficDialog to display all of the BusTrafficLog
    - Added 'ALL' to BusTraffic sidebar to invoke the new BusTrafficDialog
    - removed refresh_user_list on MDF delete from client, now done in server


MMC Version 0.10.8