@@ -1,6 +1,6 @@
 {
   "generated": "Generated by generators/generate_CANSERVO.py -t CANSERVO8C",
-  "timestamp": "202508061626",
+  "timestamp": "202508211615",
   "moduleName": "CANSERVO8C",
   "NVsetNeedsLearnMode": true,
   "numberOfChannels": 8,
@@ -929,35 +929,35 @@
           "options": [
             {
               "value": 0,
-              "label": "${channel 1"
+              "label": "${channel 1}"
             },
             {
               "value": 4,
-              "label": "${channel 2"
+              "label": "${channel 2}"
             },
             {
               "value": 8,
-              "label": "${channel 3"
+              "label": "${channel 3}"
             },
             {
               "value": 12,
-              "label": "${channel 4"
+              "label": "${channel 4}"
             },
             {
               "value": 16,
-              "label": "${channel 5"
+              "label": "${channel 5}"
             },
             {
               "value": 20,
-              "label": "${channel 6"
+              "label": "${channel 6}"
             },
             {
               "value": 24,
-              "label": "${channel 7"
+              "label": "${channel 7}"
             },
             {
               "value": 28,
-              "label": "${channel 8"
+              "label": "${channel 8}"
             }
           ]
         },
