@@ -5,6 +5,7 @@ MMC Version 0.11.3
   Reworked loading of MDF's for nodes - was failing to reload MDF if node firmware updated
   removed NODE_DESCRIPTOR_FILE_LIST event
   separated updateNodeStatus into preOpcodeProcessing & postOpcodeProcessing methods
+  MDF's updated CANLED64-A507-2g, CANMIO-SVO-A532-4S & CANSERVO8C-A513-2u/4h/4S
   Updated Client
   - added Backups column to Node View
   - added backup notification if variables changed
